<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_event_note_black_24dp"
            android:title="@string/menu_history" />
        <item
            android:id="@+id/nav_faq"
            android:icon="@drawable/ic_faq"
            android:title="@string/menu_faq" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_setting" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_deposit"
                android:icon="@drawable/ic_deposit"
                android:title="@string/menu_deposit" />
            <item
                android:id="@+id/nav_transfer"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_transfer" />
        </menu>
    </item>

</menu>
